# herVoice

./: .gitignore  README.md
backend/: .env.example  config.py  llm.py  protocol.py  requirements.txt  server.py  session.py  stt.py  tts.py
docs/: display_bringup.md  protocol.md
firmware/: CMakeLists.txt  Kconfig.projbuild  partitions.csv  sdkconfig.defaults
firmware/components/audio/: CMakeLists.txt  audio_capture.c  audio_playback.c  ring_buffer.c
firmware/components/audio/include/: audio.h  ring_buffer.h
firmware/components/esp_lcd_st77916/: CMakeLists.txt
firmware/components/net/: CMakeLists.txt  net_stream.c  wifi.c
firmware/components/net/include/: net.h  protocol.h
firmware/components/touch/: CMakeLists.txt  touch.c
firmware/components/touch/include/: touch.h
firmware/components/ui/: CMakeLists.txt  ui.c
firmware/components/ui/include/: ui.h
firmware/components/wake/: CMakeLists.txt  vad.c  wakeword.c
firmware/components/wake/include/: wake.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.c
tools/mic_test/: CMakeLists.txt  sdkconfig.defaults
tools/mic_test/main/: CMakeLists.txt  main.c
